vlib/v/checker/tests/globals/assign_no_value.out
vlib/v/checker/tests/globals/assign_no_value.vv:1:19: error: undefined ident: `int`
    1 | __global ( test = int )
      |                   ~~~
